# near-poc

./: .gitignore  README.md  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: ecrecover.rs  external.rs  lib.rs
